# Meta-Hack

./: .dockerignore  .gitignore  Dockerfile  README.md  baseline_inference.py  inference.py  llm_inference.py  openenv.yaml  pyproject.toml  requirements.txt  run_evaluation.py
server/: __init__.py  app.py
sql_env/: __init__.py  client.py  db_utils.py  grader.py  models.py  openenv.yaml  tasks.py
sql_env/server/: # SQL Query Environment - a Hugging Face  __init__.py  app.py  requirements.txt  sql_environment.py
tests/: test_sql_env.py
