[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-sql_query_env"
version = "1.0.0"
description = "SQL Query environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Rahul Kumar"},
]
dependencies = [
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    "openenv-core[core]>=0.2.2",
    # Environment-specific dependencies
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m sql_env.server.app
server = "sql_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["sql_env", "sql_env.server"]
package-dir = { "sql_env" = "sql_env", "sql_env.server" = "sql_env/server" }
